--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "eduwin",
   "version": "1.3.3",
+  "homepage": "https://winedx3.github.io/eduwin",
   "private": true,
   "dependencies": {
     "ajv": "8.12.0",
